--- a/app/templates/movies/movie_list.html
+++ b/app/templates/movies/movie_list.html
@@ -22,9 +22,7 @@
 
                <div class="product_price">
                   <div class="grid-price">
-                                 <span class="money editContent">
-                                    {{ movie.tagline }}
-                                 </span>
+                     <span class="money editContent">{{ movie.tagline }}</span>
                   </div>
                </div>
                <ul class="stars">
