--- a/app/templates/include/header.html
+++ b/app/templates/include/header.html
@@ -1,9 +1,9 @@
 <header class="header">
    <div class="container-fluid px-lg-5">
-      <!-- nav -->
+
       <nav class="py-4">
          <div id="logo">
-            <h1><a href="index.html" class="editContent" style="outline: none; outline-offset: -2px; cursor: inherit; color: rgb(255, 255, 255); font-size: 40px; background-color: rgba(0, 0, 0, 0); font-family: &quot;Source Sans Pro&quot;, sans-serif;">DjangoMovie</a></h1>
+            <a href="index.html" class="editContent" style="font-size: 30px">DjangoMovie</a>
          </div>
 
          <label for="drop" class="toggle">Menu</label>
@@ -21,19 +21,18 @@
                   <li><a href="movie_detail.html">Мультфильмы</a></li>
                </ul>
             </li>
-            <li><a href="contact.html" style="color: rgb(255, 255, 255); font-weight: 700; text-transform: uppercase;">Вход</a></li>
+            <li><a href="contact.html">Вход</a></li>
          </ul>
       </nav>
-      <!-- //nav -->
+
    </div>
 </header>
-<!-- //header -->
+
 <!--/banner-->
 <div class="banner-info">
    <p class="editContent">лучший сайт на django 3</p>
    <h3 class="mb-4 editContent">Все о кино</h3>
    <div class="ban-buttons">
-
 
    </div>
 </div>
