--- a/app/templates/include/sidebar.html
+++ b/app/templates/include/sidebar.html
@@ -8,7 +8,7 @@
    </form>
 </div>
 
-<form action="{% url 'movies:filter' %}" method="GET">
+<form action="{% url 'movies:json_filter' %}" method="GET" name="filter">
    <div class="left-side my-4">
       <h3 class="sear-head editContent">Жанры</h3>
       <ul class="w3layouts-box-list">
