--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,8 @@
    <!-- //font-awesome-icons -->
    <!-- /Fonts -->
    <link href="//fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700" rel="stylesheet">
-   <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
+   <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900"
+         rel="stylesheet">
    <!-- //Fonts -->
 </head>
 <body>
@@ -45,6 +46,9 @@
 
    {% include 'include/footer.html' %}
 </div>
+
+<script src="{% static 'js/hogan.js' %}"></script>
+<script src="{% static 'js/script.js' %}"></script>
 
 </body>
 </html>
