--- a/app/templates/movies/movie_detail.html
+++ b/app/templates/movies/movie_detail.html
@@ -53,14 +53,18 @@
                <li><span><b>Сборы в США: </b>{{ movie.fees_in_usa }}</span></li>
                <li><span><b>Сборы в мире: </b>{{ movie.fees_in_world }}</span></li>
                <li>
-                  <a href="#"><b>Рейтинг: </b>
-                     <span class="fa fa-star" aria-hidden="true"></span>
-                     <span class="fa fa-star" aria-hidden="true"></span>
-                     <span class="fa fa-star" aria-hidden="true"></span>
-                     <span class="fa fa-star" aria-hidden="true"></span>
-                     <span class="fa fa-star" aria-hidden="true"></span>
-                     <span class="editContent">5.0</span>
-                  </a>
+                  <form action="{% url 'movies:add_rating' %}" method="POST" name="rating">
+                     {% csrf_token %}
+                     <input type="hidden" value="{{ movie.id }}" name="movie">
+                     <b>Рейтинг: </b>
+                     <span class="rating">
+                        {% for k,v in star_form.fields.star.choices %}
+                           <input id="rating{{ v }}" type="radio" name="star" value="{{ k }}">
+                           <label for="rating{{ v }}">{{ k }}</label>
+                        {% endfor %}
+                     </span>
+                     <span class="editContent" aria-hidden="true">4.0</span>
+                  </form>
                </li>
                <div class="share-desc">
                   <div class="share">
