--- a/app/templates/movies/movie_list.html
+++ b/app/templates/movies/movie_list.html
@@ -38,9 +38,8 @@
          {% endfor %}
 
       </div>
-      <!--<div class="grid-img-right mt-4 text-right bg bg1" >
-          <span class="money editContent" >Flat 50% Off</span>
-          <a href="movie_detail.html" class="btn" >Now</a>
-      </div>-->
+      <div class="grid-img-right mt-4 text-right bg bg1">
+         {% include 'include/pagination.html' %}
+      </div>
    </div>
 {% endblock movie %}
